<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.RegesterActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="140dp"
        android:layout_gravity="center_horizontal">
        <EditText
            android:id="@+id/FristName"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:hint="@string/fist_name"/>
        <EditText
            android:id="@+id/LastName"
            android:layout_width="130dp"
            android:backgroundTint="@color/purple_200"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="@string/last_name"/>
    </LinearLayout>
    <EditText
        android:id="@+id/Email_Regester"
        android:layout_width="290dp"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/purple_200"
        android:hint="@string/Email"/>
    <EditText
        android:id="@+id/Password_Regester"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:backgroundTint="@color/purple_200"
        android:hint="@string/Password"/>

    <TextView
        android:id="@+id/Termes"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/terme_and_conditions"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/Regester_Btn"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:background="@drawable/curve_button_login"
        app:backgroundTint="@color/purple_500"
        android:text="@string/regester"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>