<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.ChangePasswordActivity"
    android:orientation="vertical">
    <include
        android:id="@+id/ToolbarChangePassword"
        layout="@layout/bar_layout"/>

    <EditText
        android:id="@+id/OldPassword"
        android:layout_width="290dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/purple_200"
        android:hint="@string/Password"/>
    <EditText
        android:id="@+id/New_Password"
        android:layout_width="290dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/purple_200"
        android:hint="@string/new_Password"/>

    <Button
        android:id="@+id/UpdatePassword_Btn"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:background="@drawable/curve_button_login"
        app:backgroundTint="@color/purple_500"
        android:text="@string/Update_Password"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>