<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.SettingsActivity"
    android:orientation="vertical">
    <include
        android:id="@+id/ToolbarSettings"
        layout="@layout/bar_layout"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/UserProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/UserImage"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/empty_user"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp">
                    <TextView
                        android:id="@+id/UserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/Desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Desc"
                        android:textSize="16sp"
                        />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C4E6E6E6"/>
            <LinearLayout
                android:id="@+id/UserAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/security"
                    app:tint="@color/purple_500"
                    android:layout_marginLeft="10dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_password_email"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/chat"
                    app:tint="@color/purple_500"
                    android:layout_marginLeft="10dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Chat"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chat_history_wallpaper"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/notification"
                    app:tint="@color/purple_500"
                    android:layout_marginLeft="10dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/Notifications"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/message_call_tones"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/help"
                    app:tint="@color/purple_500"
                    android:layout_marginLeft="10dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Help"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_center_contact_us_privacy_policy"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="60dp"
                android:background="#C4E6E6E6"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/people"
                    app:tint="@color/purple_500"
                    android:layout_marginLeft="10dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Invite_Friends"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/from"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dp"
                android:textSize="17sp"
                android:gravity="center"
                android:textColor="@color/purple_500"
                android:text="@string/t_o_p_c_h_a_t"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>