<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.FriendProfileActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@color/purple_500"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageButton
            android:id="@+id/FriendProfileBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white_back_arrow"
            android:background="@android:color/transparent"
            android:layout_marginEnd="170dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="145dp" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/FriendPrfilePic"
            android:transitionName="image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="-15dp"
            android:src="@drawable/empty_user"/>
        <TextView
            android:id="@+id/FriendProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="10dp"
            style="@style/TextName"
            />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/SendAndCancelAndAccepRequest"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="-25dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/curve_button_login"
        android:backgroundTint="@color/green">

        <ImageView
            android:id="@+id/SendRequest"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:scaleType="centerCrop"
            android:padding="6dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/add_friends" />
        <ImageView
            android:id="@+id/CancelRequest"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:scaleType="centerCrop"
            android:padding="6dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/cancel"
            app:tint="@color/white"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/AcceptRequest"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:scaleType="centerCrop"
            android:padding="6dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/accept"
            app:tint="@color/white"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/AceptedRequest"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:scaleType="centerCrop"
            android:padding="6dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/person"
            app:tint="@color/white"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txtSendRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_friend"
            android:gravity="center"
            android:layout_gravity="center"
            style="@style/TextButton" />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/DeclineRequest_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/curve_red"
        app:backgroundTint="@color/red"
        android:visibility="gone">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:scaleType="centerCrop"
            android:padding="6dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/close"
            app:tint="@color/white" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Decline_Request"
            android:gravity="center"
            android:layout_gravity="center"
            style="@style/TextButton" />

    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/info"
                app:tint="@color/black"
                android:layout_marginRight="10dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/About"
                    style="@style/textBackTitle"/>

                <TextView
                    android:id="@+id/FriendProfileAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/About"
                    style="@style/textDescrition"/>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C4E6E6E6"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/email"
                app:tint="@color/black"
                android:layout_marginRight="10dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Email"
                    style="@style/textBackTitle"/>

                <TextView
                    android:id="@+id/FriendProfileEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Email"
                    style="@style/textDescrition"/>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C4E6E6E6"/>


        <Button
            android:id="@+id/btn_sentfirstessage"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="70dp"
            android:background="@color/purple_200"
            android:drawableLeft="@drawable/chat"
            android:drawableTint="@color/white"
            android:text="Send Message"
            android:textColor="@color/white"
            app:backgroundTint="@color/purple_200"
            android:visibility="gone"/>

    </LinearLayout>
</LinearLayout>